# LoRA-Spec

./: .gitattributes  .gitignore  AGENTS.md  ARTIFACT.md  README.md  _bootstrap.py  pyproject.toml
.github/workflows/: ci.yml
configs/: README.md  adapters.yaml  baselines.yaml  models.yaml  prompts.yaml  serving.yaml
data/prompts/pilot_v1/: calibration.jsonl  evaluation.jsonl  manifest.json  release.lock.json
notebooks/: 01_hypothesis_check.ipynb
research_log/: log.md  run_ledger.md
scripts/: _bootstrap.py  analytical_correction.py  benchmark_serving.py  build_predictive_dataset.py  characterize.py  collect_adapter_props.py  measure_logit_shift_rank.py  phase_transition_sweep.py  plot_results.py  subspace_sharing.py  train_micro_lora.py  train_predictive.py  validate_correction_theory.py  validate_experiment_design.py  validate_hypothesis.py  verify_prompt_splits.py
slurm/: benchmark_serving.sh  sweep_70b.sh  sweep_characterize.sh  train_micro_lora.sh
src/lora_spec/: __init__.py  acceptance_theory.py  adapter_props.py  artifacts.py  config.py  correction.py  design.py  distillation.py  metrics.py  predictive.py  predictive_data.py  prompts.py  serving.py  statistical.py  theory.py  utils.py
tests/: conftest.py  test_acceptance_theory.py  test_adapter_props.py  test_artifacts.py  test_config.py  test_correction.py  test_design.py  test_distillation.py  test_metrics.py  test_plot_results.py  test_predictive.py  test_predictive_data.py  test_prompts.py  test_script_entrypoints.py  test_serving.py  test_statistical.py  test_theory.py  test_utils.py  test_vllm_integration.py
