[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lora-spec"
version = "0.1.0"
description = "Research infrastructure for studying LoRA effects on speculative decoding."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "LoRA-Spec Authors" }]
dependencies = [
  "numpy==1.26.4",
  "pandas==2.2.2",
  "pydantic==2.12.5",
  "pyyaml==6.0.1",
  "torch==2.9.1",
  "transformers==4.57.3",
  "peft==0.18.0",
  "datasets==2.19.2",
  "safetensors==0.7.0",
  "matplotlib==3.8.4",
  "huggingface-hub==0.36.0",
]

[project.optional-dependencies]
dev = [
  "build==1.2.2.post1",
  "pytest==8.2.2",
  "ruff==0.15.6",
]
analysis = [
  "jupyter==1.0.0",
  "ipykernel==6.29.5",
  "seaborn==0.13.2",
]
colab = [
  "vllm==0.15.1",
  "accelerate==1.12.0",
  "jupyter==1.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
